metadata/force-app/main/default/objects/CustomName_JELrr__c/CustomName_JELrr__c.object-meta.xml
<CustomObject>
    <description>Description_sWmfF</description>
    <label>CustomLabel_USePC</label>
    <nameField>
        <label>CustomLabel_USePC</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_USePCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>