metadata/force-app/main/default/objects/CustomName_JELrr__c/fields/CustomField_eVWyl__c.field-meta.xml
<CustomField>
    <fullName>CustomField_eVWyl__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldYeUpj</label>
    <length>255</length>
    <type>Text</type>
</CustomField>